🌊🌊fixed overflow
there was overflow on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  background: #ddd;
 }
 .container {
   width: 90%;
@@ -76,6 +77,7 @@ body {
   background-position: center;
   height: 630px;
   color: #fff;
+  overflow-x: hidden;
 }
 /*~end main-header-wrapper*/
 /**text-inside-header-img*/
@@ -150,6 +152,7 @@ body {
 .wrapper-section-2 {
   background-color: #ddd;
   height: 950px;
+  overflow-x: hidden;
 }
 
 .grid-container-section-2 {
@@ -203,11 +206,10 @@ body {
 /*footer*/
 footer {
   text-align: center;
-  background-color: #333;
-  color: #fff;
+  color: #000;
   padding: 10px;
-
   width: 100%;
+  font-size: 1.1rem;
 }
 /*end footer*/
 /*media screen*/
@@ -217,6 +219,7 @@ footer {
   }
   .wrapper-section-2 {
     margin-bottom: 200px;
+    overflow-x: hidden;
   }
 }
 @media (max-width: 930px) {
@@ -256,6 +259,13 @@ footer {
   footer {
     position: fixed;
     bottom: 0;
+    overflow-x: hidden;
+    background-color: #555;
+    color: #fff;
+  }
+  .wrapper-section-2 {
+    overflow-x: hidden;
+    height: 100%;
   }
 }
 @media (max-width: 475px) {
